# game

./: .gitignore  Cargo.toml  README.md  environment.yml  torch
.cargo/: config.toml
brain/: 0.json  1.json
src/: camera.rs  config.rs  creature.rs  custom_debug.rs  fps.rs  gizmos.rs  lib.rs  log.rs  logger.rs  main.rs  persistent_window.rs  physics.rs  physics_engine.rs  rng.rs  state.rs
src/game_logic/: creature.rs  fruit.rs  mod.rs  physics.rs  wall.rs
src/game_logic/ai/: dqn.rs  layer.rs  mod.rs  network.rs  persistency.rs  replay_buffer.rs
src/game_logic/ai/creature/: creature_state.rs  mod.rs
src/game_logic/ai/generic/: mod.rs  persistency.rs
src/game_logic/entities/: creature.rs  fruit.rs  mod.rs
src/game_logic/entities/creature/: ai.rs  mod.rs
src/logs/: mod.rs  state.rs
src/render/: camera.rs  controllable.rs  debug.rs  gizmos.rs  mod.rs  persistent_window.rs
tests/: scenario.rs
