[package]
name = "game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.13.2", features = ["dynamic_linking"] }
bevy_pancam = "0.11.1"
dirs = "5.0.1"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[features]
default = []
render = []
debug = []
