[package]
name = "game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.13.2", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.24.0"
bevy-persistent = { version = "0.5.0", features = ["all"] }
bevy-persistent-windows = "0.5.2"
bevy_pancam = "0.11.1"
bevy_rapier2d = { version = "0.26.0", features = [
    "simd-stable",
    "debug-render-2d",
] }
chrono = "0.4.38"
dirs = "5.0.1"
log = "0.4.21"
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3


[features]
render = []
